--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ body {
   margin-top: 1rem;
 }
 
-.translater{
+.translater {
   cursor: pointer;
   background-color: #dfdfdfe1;
   font-size: 1.4rem;
@@ -55,4 +55,102 @@ body {
   border-radius: 10px;
   color: #17384c;
   width: 10%;
+}
+
+.translater:hover {
+  background-color: #608094;
+  color: white;
+}
+
+.translater:hover {
+  filter: contrast(100%);
+}
+
+@media only screen and (max-width: 880px) {
+  .cityName {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .App {
+    align-items: initial;
+  }
+  .translater {
+    left: 0;
+    top: 2%;
+  }
+  .currtemp {
+    flex-direction: column;
+    gap: 5rem;
+    justify-content: center;
+  }
+  .weatherData {
+    align-items: center;
+    justify-content: initial;
+    height: fit-content;
+  }
+  .currtemp div:nth-child(2) {
+    width: 250px;
+    text-align: center;
+    font-size: 2rem;
+  }
+  .forcastdata {
+    margin-top: 2rem;
+    width: 300px;
+    overflow-x: scroll;
+    border-left: 2px solid #608094;
+    border-right: 2px solid #608094;
+  }
+  .forcastdata::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+  .forcastdata div:nth-child(n + 2) {
+    border-left: none;
+  }
+  .forcastdata div {
+    padding: 0 1.5rem;
+  }
+  .box {
+    width: fit-content;
+    padding: 1rem;
+    border: none;
+    background: none;
+    height: auto;
+    justify-content: center;
+  }
+  body {
+    background-image: none;
+    background: #141e30;
+    background: -webkit-linear-gradient(to left, #243b55, #141e30);
+    background: linear-gradient(to top, #243b55, #141e30);
+  }
+  .tempAndLogo img {
+    padding: 0;
+    margin: 0;
+    width: 130px;
+  }
+  .currtemp div {
+    padding: 0;
+  }
+  .tempAndLogo {
+    display: flex;
+    gap: 0;
+    justify-content: center;
+    align-items: center;
+    width: 330px;
+    margin-top: 2rem;
+    border: 2px solid #608094;
+    border-radius: 10px;
+  }
+  .windData {
+    display: none;
+  }
+}
+@media only screen and (min-width: 480px) {
+  .rigtharrow {
+    display: none;
+  }
+  .leftarrow {
+    display: none;
+  }
 }
