--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
+
 body {
   background: #485563;
   background: -webkit-linear-gradient(to right, #29323c, #485563);
@@ -15,41 +17,46 @@ body {
   color: rgb(255, 255, 255);
   display: flex;
 }
-.App{
+
+.App {
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.weatherBox{
+
+.weatherBox {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  background: #141E30;
-  background: -webkit-linear-gradient(to right, #243B55, #141E30);
-  background: linear-gradient(to right, #243B55, #141E30);
+  background: #141e30;
+  background: -webkit-linear-gradient(to right, #243b55, #141e30);
+  background: linear-gradient(to right, #243b55, #141e30);
   border: 5px solid #608094;
   border-radius: 20px;
   padding: 2rem 3rem;
   position: relative;
 }
-.cityName{
+
+.cityName {
   font-size: 2rem;
   font-weight: bold;
   width: 100%;
 }
-.cityName>p{
+
+.cityName > p {
   position: relative;
 }
-.cityName>p img{
+
+.cityName > p img {
   width: 20px;
   position: absolute;
 }
 
-.currentTemp{
+.currentTemp {
   width: 97%;
   display: flex;
   align-items: center;
@@ -58,7 +65,7 @@ body {
   font-weight: bold;
 }
 
-.forcastdata{
+.forcastdata {
   width: 100%;
   display: flex;
   align-items: center;
@@ -67,7 +74,8 @@ body {
   position: relative;
   scroll-behavior: smooth;
 }
-.windData{
+
+.windData {
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -77,16 +85,20 @@ body {
   gap: 1rem;
   width: 250px;
 }
-.windData span{
+
+.windData span {
   color: #619460;
 }
-.currtemp div:nth-child(2){
+
+.currtemp div:nth-child(2) {
   font-size: 4rem;
 }
-.currtemp div:nth-child(2)>p{
+
+.currtemp div:nth-child(2) > p {
   font-size: 1.7rem;
 }
-.search{
+
+.search {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -96,7 +108,7 @@ body {
   padding: 0 1rem;
 }
 
-input{
+input {
   background-color: transparent;
   border: none;
   outline: none;
@@ -106,7 +118,7 @@ input{
   color: #17384c;
 }
 
-.weatherData{
+.weatherData {
   width: 100%;
   height: 100%;
   display: flex;
@@ -115,12 +127,12 @@ input{
   gap: 2rem;
 }
 
-.invalid{
+.invalid {
   color: #ff4b4b;
   margin-top: 1rem;
 }
 
-.translater{
+.translater {
   cursor: pointer;
   background-color: #dfdfdfe1;
   font-size: 1.4rem;
@@ -129,126 +141,322 @@ input{
   color: #17384c;
   width: 80px;
 }
-.translater:hover{
+
+.translater:hover {
   background-color: #608094;
   color: white;
 }
-.translater:hover{
+
+.translater:hover {
   filter: contrast(100%);
 }
-.forcastdata div:nth-child(n+2){
+
+.forcastdata div:nth-child(n + 2) {
   border-left: 2px solid rgba(255, 255, 255, 0.166);
 }
-.forcastdata div{
+
+.forcastdata div {
   padding: 0 2rem;
 }
-.tempAndLogo{
+
+.tempAndLogo {
   display: flex;
   align-items: center;
   justify-content: space-around;
   width: 63%;
 }
-.rightArrow{
+
+.rightArrow {
   position: absolute;
-  font-size: 2rem;
-  bottom: 29%;
-  right: 0%;
+  font-size: 2.5rem;
+  bottom: 20%;
+  right: 4%;
 }
-.leftArrow{
+
+.leftArrow {
   position: absolute;
-  font-size: 2rem;
-  bottom: 29%;
-  left: 0%;
+  font-size: 2.5rem;
+  bottom: 20%;
+  left: 4%;
 }
-.copyRightText{
+
+.copyRightText {
   font-size: 0.8rem;
 }
 
-@media only screen and (max-width: 880px){
-    .cityName{
-      flex-direction: column;
-      gap: 1rem;
-    }
-    .App{
-      align-items: initial;
-    }
-    .translater{
-      left: 0;
-      top: 2%;
-    }
-    .currentTemp{
-      flex-direction: column;
-      gap: 5rem;
-      justify-content: center;
-    }
-    .weatherData{
-      align-items: center;
-      justify-content: initial;
-      height: fit-content;
-    }
-    .currtemp div:nth-child(2){
-      width: 250px;
-      text-align: center;
-      font-size: 2rem;
-    }
-    .forcastdata{
-      margin-top: 2rem;
-      width: 300px;
-      overflow-x: scroll;
-      border-left: 2px solid #608094;
-      border-right: 2px solid #608094;
-    }
-    .forcastdata::-webkit-scrollbar{
-      width: 0px;
-      height: 0px;
-    }
-    .forcastdata div:nth-child(n+2){
-      border-left: none;
-    }
-    .forcastdata div{
-      padding: 0 1.5rem;
-    }
-    .box{
-      width: fit-content;
-      padding: 1rem;
-      border: none;
-      background: none;
-      height: auto;
-      justify-content: center;
-    }
-    body{
-      background-image: none;
-      background: #141E30;
-      background: -webkit-linear-gradient(to left, #243B55, #141E30);
-      background: linear-gradient(to top, #243B55, #141E30);
-    }
-    .tempAndLogo img{
-      padding: 0;
-      margin: 0;
-      width: 130px;
-    }
-    .currtemp div{
-      padding: 0;
-    }
-    .tempAndLogo{
-      display: flex;
-      gap: 0;
-      justify-content: center;
-      align-items: center;
-      width: 330px;
-      margin-top: 2rem;
-      border: 2px solid #608094;
-      border-radius: 10px;
-    }
-    .windData{
-      display: none;
-    }
+/* ===>>> Smartphones */
+@media only screen and (max-width: 375px) {
+  .cityName {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .currentTemp {
+    flex-direction: column;
+    gap: 5rem;
+    justify-content: center;
+  }
+  .weatherBox {
+    padding: 1rem 0.8rem;
+  }
+  .weatherData {
+    align-items: center;
+    justify-content: initial;
+    height: fit-content;
+  }
+  .currtemp div:nth-child(2) {
+    width: 250px;
+    text-align: center;
+    font-size: 2rem;
+  }
+  .forcastdata {
+    margin-top: 2rem;
+    width: 300px;
+    overflow-x: scroll;
+    border-left: 2px solid #608094;
+    border-right: 2px solid #608094;
+  }
+  .forcastdata::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+  .forcastdata div:nth-child(n + 2) {
+    border-left: none;
+  }
+  .forcastdata div {
+    padding: 0 1.5rem;
+  }
+  .box {
+    width: fit-content;
+    padding: 1rem;
+    border: none;
+    background: none;
+    height: auto;
+    justify-content: center;
+  }
+  body {
+    background-image: none;
+    background: #141e30;
+    background: -webkit-linear-gradient(to left, #243b55, #141e30);
+    background: linear-gradient(to top, #243b55, #141e30);
+  }
+  .tempAndLogo img {
+    padding: 0;
+    margin: 0;
+    width: 130px;
+  }
+  .currtemp div {
+    padding: 0;
+  }
+  .tempAndLogo {
+    display: flex;
+    gap: 0;
+    justify-content: center;
+    align-items: center;
+    width: 330px;
+    margin-top: 2rem;
+    border: 2px solid #608094;
+    border-radius: 10px;
+  }
+  .windData {
+    display: none;
+  }
+  .rightArrow {
+    position: absolute;
+    font-size: 2rem;
+    bottom: 20%;
+    right: 1%;
+  }
+  .leftArrow {
+    position: absolute;
+    font-size: 2rem;
+    bottom: 20%;
+    left: 1%;
+  }
 }
-@media only screen and (min-width: 480px){
-    .rightArrow{
-      display: none;
-    }
-    .leftArrow{
-      display: none;
-    }
+@media (min-width: 376px) and (max-width: 500px) {
+  .cityName {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .currentTemp {
+    flex-direction: column;
+    gap: 5rem;
+    justify-content: center;
+  }
+  .weatherBox {
+    padding: 1rem 1.8rem;
+  }
+  .weatherData {
+    align-items: center;
+    justify-content: initial;
+    height: fit-content;
+  }
+  .currtemp div:nth-child(2) {
+    width: 250px;
+    text-align: center;
+    font-size: 2rem;
+  }
+  .forcastdata {
+    margin-top: 2rem;
+    width: 300px;
+    overflow-x: scroll;
+    border-left: 2px solid #608094;
+    border-right: 2px solid #608094;
+  }
+  .forcastdata::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+  .forcastdata div:nth-child(n + 2) {
+    border-left: none;
+  }
+  .forcastdata div {
+    padding: 0 1.5rem;
+  }
+  .box {
+    width: fit-content;
+    padding: 1rem;
+    border: none;
+    background: none;
+    height: auto;
+    justify-content: center;
+  }
+  body {
+    background-image: none;
+    background: #141e30;
+    background: -webkit-linear-gradient(to left, #243b55, #141e30);
+    background: linear-gradient(to top, #243b55, #141e30);
+  }
+  .tempAndLogo img {
+    padding: 0;
+    margin: 0;
+    width: 130px;
+  }
+  .currtemp div {
+    padding: 0;
+  }
+  .tempAndLogo {
+    display: flex;
+    gap: 0;
+    justify-content: center;
+    align-items: center;
+    width: 330px;
+    margin-top: 2rem;
+    border: 2px solid #608094;
+    border-radius: 10px;
+  }
+  .windData {
+    display: none;
+  }
+}
+
+/* ===>>> Tablet */
+@media (min-width: 501px) and (max-width: 768px) {
+  .cityName {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .App {
+    align-items: initial;
+  }
+  .currentTemp {
+    flex-direction: column;
+    gap: 5rem;
+    justify-content: center;
+  }
+  .weatherData {
+    align-items: center;
+    justify-content: initial;
+    height: fit-content;
+  }
+  .currtemp div:nth-child(2) {
+    width: 250px;
+    text-align: center;
+    font-size: 2rem;
+  }
+  .forcastdata {
+    margin-top: 2rem;
+    width: 300px;
+    overflow-x: scroll;
+    border-left: 2px solid #608094;
+    border-right: 2px solid #608094;
+  }
+  .forcastdata::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+  .forcastdata div:nth-child(n + 2) {
+    border-left: none;
+  }
+  .forcastdata div {
+    padding: 0 1.5rem;
+  }
+  .box {
+    width: fit-content;
+    padding: 1rem;
+    border: none;
+    background: none;
+    height: auto;
+    justify-content: center;
+  }
+  body {
+    background-image: none;
+    background: #141e30;
+    background: -webkit-linear-gradient(to left, #243b55, #141e30);
+    background: linear-gradient(to top, #243b55, #141e30);
+  }
+  .tempAndLogo img {
+    padding: 0;
+    margin: 0;
+    width: 130px;
+  }
+  .currtemp div {
+    padding: 0;
+  }
+  .tempAndLogo {
+    display: flex;
+    gap: 0;
+    justify-content: center;
+    align-items: center;
+    width: 330px;
+    margin-top: 2rem;
+    border: 2px solid #608094;
+    border-radius: 10px;
+  }
+  .windData {
+    display: none;
+  }
+}
+
+/* ===>>> Normal */
+@media (min-width: 769px) and (max-width: 1200px) {
+  .sizing {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+/* ===>>> Widescreen */
+@media (min-width: 1201px) {
+  .sizing {
+    padding-left: 76px;
+    padding-right: 76px;
+  }
+}
+
+/* ===>>> Landscape */
+/* @media(max-height: 500px) {
+  body {
+      background: rgb(255, 166, 0);
+  }
+
+} */
+
+@media only screen and (min-width: 480px) {
+  .rightArrow {
+    display: none;
+  }
+  .leftArrow {
+    display: none;
+  }
 }
