--- a/src/index.css
+++ b/src/index.css
@@ -203,6 +203,10 @@ input {
     justify-content: initial;
     height: fit-content;
   }
+  .search {
+    height: 50px;
+    font-size: 24px;
+  }
   .currtemp div:nth-child(2) {
     width: 250px;
     text-align: center;
